<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarLugarActivity" >

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_lugar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </TextView>

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/descripcion_del_lugar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/latitud_del_lugar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/editLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/longitud_del_lugar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/editLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/foto_del_lugar"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/editFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar_lugar" />

</LinearLayout>