<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InsertarLugarActivity" >

           <TextView
            android:id="@+id/anade_textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_lugar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/anade_editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/anade_textViewDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/descripcion_del_lugar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/anade_editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/anade_textViewLatitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/latitud_del_lugar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/anade_editTextLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/anade_textViewLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/longitud_del_lugar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/anade_editTextLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <TextView
            android:id="@+id/anade_textViewFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_del_lugar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="no-foto"
                android:id="@+id/anade_editTextFoto" android:visibility="gone"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleccionar"
                    android:id="@+id/anade_botonSeleccionaFoto"/>
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/anade_foto"/>
        </LinearLayout>
        <Button
            android:id="@+id/anade_buttonGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_guardar_lugar" />

    </LinearLayout>
</ScrollView>